# KomaruCardsBot

./: .gitignore  README.MD  bot.py  main.py  pyproject.toml
data/: card_classifier.pth
src/: config_manager.py  interactor.py  logger.py  models.py  parser.py  shop.py  utils.py
src/nn/: model.py  predict.py
