[project]
name = "komarucardsbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "toml>=0.10.2",
    "telethon==1.42.0",
    "torch==2.9.1",
    "transformers==4.57.3",
    "torchvision==0.24.1",
    "scikit-learn==1.8.0"
]
